--- a/index.html
+++ b/index.html
@@ -56,12 +56,38 @@
 
     <div class="body-header"></div>
 
+    <div class="section-1">
+
+      <a href="https://www.golfnow.com/" target="_blank"><button class="section-1-button">Book Now </button></a>
+      <h1>Experience Saratoga Greens Golf Club!</h1>
+
  
-    <div class="section-2">
-      <h1>Welcome to Golf's Paradise</h1>
+      <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur omnis itaque corrupti rerum deleniti beatae soluta quos.
+    </p>
+
+  <img class="section-1-image" src="./golf_stock_2.jpg">
 
 
     <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur omnis itaque corrupti rerum deleniti beatae soluta quos.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur omnis itaque corrupti rerum deleniti.
+    </p>
+
+   
+
+    </div>
+
+
+
+
+
+    <div class="section-2">
+      <h1>18 Holes of Glory</h1>
+
+
+      <a href="./course.html"><button class="section-1-button">See More</button></a>
+
+      <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur omnis itaque corrupti rerum deleniti beatae soluta quos.
     </p>
 
@@ -71,7 +97,7 @@
 
 
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur omnis itaque corrupti rerum deleniti beatae soluta quos.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur omnis itaque corrupti rerum deleniti beatae soluta quos.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit magnam consequuntur.
     </p>
 
 
@@ -87,8 +113,8 @@
 
 
 
-   
-   
+
+
     <div class="container-footer">
       <div class="footer">
                
@@ -132,8 +158,6 @@
    </div>
 
 </footer>
-
-
 
 
 
